--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>My first git repo</title>
 </head>
 <body>
+    <h1>Now i cna push to github</h1>
+    <h2>I am starting code </h2>
+    <h3>Coding is awesome</h3>
+    
     
 </body>
 </html>
