--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first git repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Now i cna push to github</h1>
     <h2>I am starting code </h2>
     <h3>Coding is awesome</h3>
-    
+    <p>Learning coding is a tough for starter</p>
+    <p>We need to keep trying.After a time it will be  little bit comportable for you </p>
+
     
 </body>
 </html>
