--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h3>Coding is awesome</h3>
     <p>Learning coding is a tough for starter</p>
     <p>We need to keep trying.After a time it will be  little bit comportable for you </p>
+    <p> Git pushed</p>
 
     
 </body>
