--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Now i cna push to github</h1>
+    <h1>Now i can push to github</h1>
     <h2>I am starting code </h2>
     <h3>Coding is awesome</h3>
     <p>Learning coding is a tough for starter</p>
