--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <p>Learning coding is a tough for starter</p>
     <p>We need to keep trying.After a time it will be  little bit comportable for you </p>
     <p> Git pushed</p>
+    
+   <img src="myself.jpg" alt="">
 
+   <h3>Now you can push in on github</h3>
     
 </body>
 </html>
