--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>We need to keep trying.After a time it will be  little bit comportable for you </p>
     <p> Git pushed</p>
     
-   <img src="myself.jpg" alt="">
+   <img src="passport-pic.jpg" alt="">
 
    <h3>Now you can push in on github</h3>
     
